# ragent

./: .env.example  .env.mcp_hub.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENT.md  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.es-test  Makefile  README.md  pyproject.toml
.agent/hooks/: post_test_capture.sh  session_start.sh  stop_guard.sh
.agent/skills/review/: SKILL.md
.agent/skills/simplify/: SKILL.md
.agents/: settings.json
.agents/hooks/: pre_commit_gate.sh  pre_push_gate.sh  stamp_pre_commit_approved.sh
.claude/: settings.json  settings.local.json
.claude/hooks/: pre_commit_gate.sh  pre_push_gate.sh  stamp_pre_commit_approved.sh
.github/: pull_request_template.md
.github/workflows/: chaos-nightly.yml  pr_agent_gemini.yml  pythonci.yml
alembic/: env.py
alembic/versions/: 000_squash.py  011_ingest_type_upload.py  012_documents_status_created_index.py  012_feedback.py  013_skills.py
config/: quality_validation.yaml
deploy/grafana/: ragent_overview.json
deploy/k8s/: configmap.yaml  deployment.yaml  vaultsecret.yaml
deploy/prometheus/: alerts.yaml
docs/: 00_API.md  00_ARCHITECTURE.md  00_api_call_chains.md  00_decisions.md  00_domain_map.md  00_journal.md  00_plan.md  00_plan_done.md  00_rule.md  00_rule_third_party_api.md  00_spec.md  API.md  SECURITY_AUDIT.md  api_call_chains.md  chat_intent_matrix.md  chatagent_agent_backend.md  ha_runbook.md  skills_frontend_plan.md
docs/completed_plan/: phase1_tracks.md  phase1_v2_tracks.md
docs/spec/: brainagent_v1.md  chat_attachments.md  chatagent_agent_backend.md  chatagent_v3.md  data_structures.md  decision_log.md  dependency_rules.md  draft.md  endpoints.md  env_vars.md  error_codes.md  mcp_hub.md  mcp_server.md  projects.md  skills.md  standards.md  twp_ai.md
migrations/: 012_documents_status_created_index.sql  013_skills.sql  014_chat_attachment_artifacts_content_type.sql  014_chat_attachments_async.sql  015_drop_chat_attachment_artifacts_fk.sql  schema.sql
resources/es/: chunks_v1.json
scripts/: app_doctor.py  decrypt_artifact.py  gen_attachment_keys.py
src/ragent/: api.py  reconciler.py  worker.py
tests/: conftest.py  helpers.py
tests/e2e/: conftest.py  test_ingest_multiversion_supersede.py
tests/integration/: test_attachments_router.py  test_bootstrap_auto_init.py  test_chat_endpoint.py  test_chat_failure_paths.py  test_chat_pipeline_retrieval.py  test_chat_stream_endpoint.py  test_chatagent_endpoint.py  test_chatagent_v2_endpoint.py  test_chatagent_v3_endpoint.py  test_embedding_lifecycle_e2e.py  test_es_resource_drift.py  test_feedback_loop.py  test_health_endpoints.py  test_http_delete_runs_fan_out.py  test_mcp_hub_streamable_http.py  test_mcp_router.py  test_pipeline_retry_idempotent.py  test_pipeline_timeout.py  test_reconciler_delete_resume.py  test_reconciler_failed.py  test_reconciler_failed_cleanup.py  test_reconciler_multi_ready_repair.py  test_reconciler_per_tick_engine.py  test_reconciler_redispatch.py  test_reconciler_uploaded_orphan.py  test_schema_drift.py  test_skill_crud_int.py  test_supersede_task.py  test_worker_atomic_promote.py  test_worker_heartbeat.py  test_worker_minio_cleanup.py
tests/unit/: test_active_model_registry.py  test_adk_caller.py  test_admin_embedding_router.py  test_admin_ops_router.py  test_alembic_env_dsn.py  test_alembic_migration_chain.py  test_alembic_migration_parity.py  test_alert_rules.py  test_api_versioning.py  test_app_lifespan_infra.py  test_armasec_auth.py  test_armasec_public_paths.py  test_ast_cipher.py  test_async_repository_contract.py  test_attachment_context_resolver.py  test_attachment_ids_schema.py  test_attachment_ingest_service.py  test_attachment_repository.py  test_attachments_router.py  test_attachments_schema.py  test_backfill_worker.py  test_bootstrap_startup_guard.py  test_brain_agent.py  test_brain_caller.py  test_brain_upstream_proxy.py  test_brainagent_router.py  test_budget_chunker.py  test_build_rag_messages.py  test_chat_attachment_pipeline.py  test_chat_attachment_service.py  test_chat_endpoint_retrieval.py  test_chat_intent.py  test_chat_pipeline_components.py  test_chat_pipeline_observability.py  test_chat_request_schema.py  test_chat_retrieve_tracing.py  test_chat_router_feedback_token.py  test_chat_stream_store.py  test_chat_uses_raw_content.py  test_chatagent_proxy.py  (+131 more)
(+188 files in other folders)
