[project]
name = "ragent"
version = "0.1.0"
description = "Distributed RAG Agent System (Phase 1 skeleton)"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.18.4",
    "elasticsearch-haystack==6.1.0",
    "fastapi==0.136.3",
    "haystack-ai==2.29.0",
    "httpx==0.28.1",
    "jsonschema==4.26.0",
    "minio==7.2.20",
    "mistletoe==1.5.1",
    "selectolax==0.3.34",
    "opentelemetry-exporter-otlp-proto-grpc==1.42.0",
    "opentelemetry-instrumentation-fastapi==0.63b0",
    "opentelemetry-sdk==1.42.0",
    "prometheus-client==0.25.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "aiomysql==0.3.2",
    "pymysql==1.2.0",
    "sqlalchemy==2.0.49",
    "structlog==25.5.0",
    "taskiq==0.12.4",
    "taskiq-redis==1.2.2",
    "uuid-utils==0.16.0",
    "uvicorn==0.47.0",
    "python-multipart==0.0.29",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "pymupdf4llm==1.27.2.3",
    "fastmcp==3.3.1",
    "pyyaml==6.0.3",
    "joserfc==1.6.5",
    "rapidocr-onnxruntime==1.4.4",
    # opencv-python-headless replaces opencv-python (pulled by rapidocr) so that
    # libGL / libX11 are not required in slim containers.
    "opencv-python-headless==4.13.0.92",
    # onnxruntime 1.24+ dropped Python 3.10 wheels; pin for py310
    "onnxruntime==1.23.2; python_version == '3.10'",
    "twp-ai",
]

[project.optional-dependencies]
dev = [
    "bandit==1.9.4",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff==0.15.14",
    "safety==3.7.0",
    "pre-commit==4.6.0",
    "detect-secrets==1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
constraint-dependencies = ["cyclopts==4.15.0"]

[tool.uv.workspace]
members = ["packages/twp-ai"]

[tool.uv.sources]
twp-ai = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/ragent"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/twp-ai/tests"]
pythonpath = ["src", "tests"]
addopts = "-q --tb=short"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "fakeredis==2.35.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-httpserver==1.1.5",
    "ruff==0.15.14",
    "pre-commit==4.6.0",
    "detect-secrets==1.5.0",
    "testcontainers[elasticsearch,mariadb,minio,redis]==4.14.2",
    "fpdf2==2.8.7",
]
